ble quickfix 1